kubernetes/apps/platform/monitoring-config/alertmanager-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.lab.ryantaylor.tech`)
      kind: Rule
      middlewares:
        - name: authentik-forwardauth
          namespace: traefik
      services:
        - name: monitoring-kube-prometheus-stack-alertmanager
          port: 9093
  tls: {}
