kubernetes/apps/platform/monitoring-config/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.lab.ryantaylor.tech`)
      kind: Rule
      middlewares:
        - name: authentik-forwardauth
          namespace: traefik
      services:
        - name: monitoring-grafana
          port: 80
  tls: {}
