kubernetes/apps/platform/monitoring-config/prometheus-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.lab.ryantaylor.tech`)
      kind: Rule
      middlewares:
        - name: authentik-forwardauth
          namespace: traefik
      services:
        - name: monitoring-kube-prometheus-stack-prometheus
          port: 9090
  tls: {}
